Adding .gitignore.save to my .gitignore, as well as saving changes for section2

--- a/section-2-co-basin-water-conflicts.ipynb
+++ b/section-2-co-basin-water-conflicts.ipynb
@@ -1689,9 +1689,267 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d2cbba53-19f4-491d-bc17-7eb5a0abb14c",
+   "metadata": {},
+   "source": [
+    "## 5. String accessor for pandas.Series\n",
+    "In the following exercises we will work with pandas.Series whose values are strings. This is a common scenario, so pandas has special string methods for this kind of series. These methods are accessed via the str accessor. Accessors provide additional functionality for working with specific kinds of data (in this case, strings).\n",
+    "\n",
+    "The code below gives a brief demonstration of the using the str accessor to use the split() method for pandas.Series. Carefully read the code and check in with your team to see if you have questions about it. We’ll use it in a moment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "d1cb6491-528f-4b77-8edf-cfdd551affc5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    California; Nevada\n",
+       "1               Arizona\n",
+       "2                   NaN\n",
+       "3          Nevada; Utah\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "\n",
+    "# Example series\n",
+    "s = pd.Series(['California; Nevada', 'Arizona', np.nan, 'Nevada; Utah'])\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "88eac4e0-b0f3-4cc3-9b0b-32219cdf679a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.strings.accessor.StringMethods at 0x7f9233250d50>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# str accessor (doesn't do anything by itself)\n",
+    "s.str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ab4bf214-6d70-432a-b740-7eb542637c23",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    California; Nevada\n",
+       "1               Arizona\n",
+       "2                   NaN\n",
+       "3          Nevada; Utah\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use str accessor with additional methods to perform string operations\n",
+    "# .split splits strings by ';' and expands output into separate columns\n",
+    "s.str.split(';', expand=True)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "60855e67-78e9-442c-9d12-edf5e4745df1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0  0    California\n",
+       "   1        Nevada\n",
+       "1  0       Arizona\n",
+       "3  0        Nevada\n",
+       "   1          Utah\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use stack() method to flatten the data frame into a series\n",
+    "# default is to drop NAs and None from result\n",
+    "s.str.split(';', expand=True).stack() # creates a multi-index (use '.index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "71213a38-641f-46b8-a372-0491ccd24d09",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7719ff1b-eace-4aa3-808d-bf779ca70edd",
+   "metadata": {},
+   "source": [
+    "## 6. Examine state codes\n",
+    "Our goal today is to find which states are reported in the dataset as having a water conflicts.\n",
+    "\n",
+    "What are the unique values in the States column once filtering the dataset for states that have a water conflict? What could be a challenge to writing code to find which states are listed (without repetition)? Remember to write longer answers in markdown cells, not as comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "14af6ec0-4215-4cf1-afd6-50db6f59fb90",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Event', 'Search Source', 'Newspaper', 'Article Title', 'Duplicate',\n",
+       "       'Report Date', 'Report Year', 'Event Date', 'Event Day', 'Event Month',\n",
+       "       'Event Year', 'Conflict Present', 'Crisis Present', 'Basin', 'HUC6',\n",
+       "       'HUC2', 'Place', 'County', 'County FIPS', 'State', 'State FIPS',\n",
+       "       'Urban or Rural', 'Issue Type', 'Event Summary', 'Stakeholders',\n",
+       "       'Intensity Value', 'Comments', 'Related Observation Themes',\n",
+       "       'Article Text Search - water quality',\n",
+       "       'Article Text Search - invasive species',\n",
+       "       'Article Text Search - conservation', 'Article Text Search - drought',\n",
+       "       'Article Text Search - flood',\n",
+       "       'Article Text Search - ground water depletion',\n",
+       "       'Article Text Search - depletion',\n",
+       "       'Article Text Search - infrastructure',\n",
+       "       'Article Text Search - fish passage',\n",
+       "       'Article Text Search - instream water rights',\n",
+       "       'Article Text Search - water rights',\n",
+       "       'Article Text Search - intergovernmental',\n",
+       "       'Article Text Search - water transfers',\n",
+       "       'Article Text Search - navigation', 'Article Text Search - fish',\n",
+       "       'Article Text Search - invasive', 'Article Text Search - diversion',\n",
+       "       'Article Text Search - water diversion',\n",
+       "       'Article Text Search - instream', 'Article Text Search - aquatic'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "426bc99d-96d6-46b4-8177-f67dab6e229b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['CO', nan, 'AZ', 'OH; UT', 'UT', 'CA', 'AZ; NV', 'CO; UT; WY; NM',\n",
+       "       'AZ; CA', 'AZ; UT', 'NV; AZ', 'AZ; CA; CO; NV; NM; UT; WY', 'NV',\n",
+       "       'NM', 'UT; CO; WY', 'AZ; NM', 'WY; UT; CO', 'CO; AZ'], dtype=object)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Creating a variable that only has conflict present\n",
+    "water_con = df[df['Conflict Present'] == 'Y']\n",
+    "# Checking the State column\n",
+    "water_con['State'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "4a236039-d345-4017-a614-a05adefa701d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['CO', 'AZ', 'OH', 'UT', 'CA', 'NV', 'WY', 'NM'], dtype=object)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Usting `str.string` method to split more than one state in the column\n",
+    "water_con['State'].str.split('; ', expand=True).stack().unique()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1cb6491-528f-4b77-8edf-cfdd551affc5",
+   "id": "815e7a15-8e29-4bb0-882d-875a59611d7f",
    "metadata": {},
    "outputs": [],
    "source": []
