--- a/section-2-co-basin-water-conflicts.ipynb
+++ b/section-2-co-basin-water-conflicts.ipynb
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 106,
    "id": "426bc99d-96d6-46b4-8177-f67dab6e229b",
    "metadata": {
     "tags": []
@@ -1910,13 +1910,15 @@
        "       'NM', 'UT; CO; WY', 'AZ; NM', 'WY; UT; CO', 'CO; AZ'], dtype=object)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Creating a variable that only has conflict present\n",
+    "# Another way: `df[df['Conflict Present'] == 'Y']['State']`\n",
+    "\n",
     "water_con = df[df['Conflict Present'] == 'Y']\n",
     "# Checking the State column\n",
     "water_con['State'].unique()"
@@ -1936,7 +1938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 107,
    "id": "4a236039-d345-4017-a614-a05adefa701d",
    "metadata": {
     "tags": []
@@ -1945,17 +1947,29 @@
     {
      "data": {
       "text/plain": [
-       "array(['CO', 'AZ', 'OH', 'UT', 'CA', 'NV', 'WY', 'NM'], dtype=object)"
+       "0    0    CO\n",
+       "1    0    CO\n",
+       "5    0    AZ\n",
+       "11   0    OH\n",
+       "     1    UT\n",
+       "          ..\n",
+       "257  0    AZ\n",
+       "258  0    UT\n",
+       "262  0    AZ\n",
+       "265  0    AZ\n",
+       "     1    CA\n",
+       "Length: 132, dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Usting `str.string` method to split more than one state in the column\n",
-    "water_con['State'].str.split('; ', expand=True).stack().unique()"
+    "# Could use `str.strip`\n",
+    "water_con['State'].str.split('; ', expand=True).stack()"
    ]
   },
   {
