completed task 4- Dectecting messy values

--- a/section-3-snowhorse-hares-Bonanza.ipynb
+++ b/section-3-snowhorse-hares-Bonanza.ipynb
@@ -645,19 +645,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "743162ad-4c52-49d6-a4b3-792cf7108db0",
+   "cell_type": "markdown",
+   "id": "add25488-a31f-4cde-b94f-f03ddecb917d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 4. Detecting messy values\n",
+    "In the metadata section of the EDI repository, find which are the allowed values for the hares’ sex. Create a small table in a markdown cell showing the values and their definitions.\n",
+    "Get the number of times each unique sex non-NA value appears.\n",
+    "Check the documentation of value_counts(). What is the purpose of the dropna parameter and what is its default value? Repeat step (a), this time adding the dropna=False parameter to value_counts().\n",
+    "\n",
+    "Discuss with your team the output of the unique value counts. In particular:\n",
+    "\n",
+    "Do the values in the sex column correspond to the values declared in the metadata?\n",
+    "What could have been potential causes for multiple codes?\n",
+    "Are there seemingly repated values? If so, what could be the cause?\n",
+    "Write code to confirm your suspicions about c-iii."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e66da84-0689-4e76-a8da-c21f0e33d8d9",
+   "metadata": {},
+   "source": [
+    "| Code      | Definition |\n",
+    "| ----------- | ----------- |\n",
+    "| m   | male       |\n",
+    "| f   | female        |\n",
+    "| m?  | male not confirmed     |\n",
+    "| f?  | female not confirmed       |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "2fd29f46-4fb7-4ee3-b055-6ca65cfe3d09",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex\n",
+       "f     1721\n",
+       "m     1249\n",
+       "f?      13\n",
+       "m?       4\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hares['sex'].str.lower().str.strip().value_counts().drop([\"?\",\"pf\"])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beed2867-84d6-4477-bef1-604580451507",
+   "id": "13532f65-2256-4184-9b5d-b3e1f21a30ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hares['sex'].str.lower().str.strip().value_counts(dropna=)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c9bd465-9db5-4209-be18-2be915fbe4bf",
    "metadata": {},
    "outputs": [],
    "source": []
